--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dompurify": "^3.0.1",
+    "dotenv": "^16.0.3",
     "electron": "^23.2.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
