--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
+    "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
