--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
     "electron": "^23.2.1",
+    "emoji-regex": "^8.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "isomorphic-dompurify": "^1.2.0",
