--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "discord.js": "^14.9.0",
     "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
     "electron": "^23.2.1",
