Started working on Hubs

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 MONGODB_URL=<your mongodb url>
 OPENAI_API_KEY=<your openai api key>
+DISCORD_WEBHOOK_ID=<your discord webhook id>
+DISCORD_WEBHOOK_TOKEN=<your discord webhook token>
