--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "tippy.js": "^6.3.7"
   },
   "description": ""
 }
