--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "emoji-regex": "^8.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "^9.21.0",
     "isomorphic-dompurify": "^1.2.0",
     "jsdom": "^21.1.1",
     "localtunnel": "^2.0.2",
