--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "localtunnel": "^2.0.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
     "passport": "^0.6.0",
