--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "startwithtunnel": "node server.js"
+    "startwithoutnodemon": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "discord.js": "^14.9.0",
     "dompurify": "^3.0.1",
@@ -27,12 +25,9 @@
     "localtunnel": "^2.0.2",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^2.6.11",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0"
